Fix memory leak + split answer message