@@ -6,3 +6,5 @@ heroku ps:scale web=0 --app wfwbf-docker
 
 heroku restart --app wfwbf-docker
 
+-Xms70m -Xmx70m -XX:MaxPermSize=25m 
+
